# python_learning_by_kashish

./: README.md  pyproject.toml
contextvar_in_asyncio/: contextvar_inside_eventloop.py  main.py
functools/: partial-learning.py
job_match_application/: config.py  database.py  main.py  models.py  requirements.txt  round_robin_data_copy_job_board_list.py  schemas.py  temp.py
jobmatch/: candidate_recommend_jobmatch.py
multiprocessing/: dummy.py  mp.py
namespace packages/abc/: pyproject.toml
namespace packages/abc/tests/: test_dende.py
namespace packages/xyz/: pyproject.toml
pandas_learning/: abc.csv  transform_logs.py  xyz.csv
print_name_of_the_caller_module/: foo.py  module_a.py
redis_cache/: config.py  demo.py  redis_cache.py  ring_learning.py
requests_module/: download_big_files.py  requests_demo1.py  requests_demo2.py
sqlalchemy_/examples/: example1.py
