[tool.poetry]
name = "python_learning"
version = "0.1.0"
description = ""
authors = ["Kashish <kbhatiya999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
fastapi = "^0.77.1"
SQLAlchemy = "^1.4.36"
mysqlclient = "^2.1.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
