[tool.poetry]
name = "dende_subpackage_a"
version = "0.1.0"
description = ""
authors = ["Kashish <kbhatiya999@gmail.com>"]
packages = [
    { include = "dende" },
]

[tool.poetry.dependencies]
python = "^3.8"
tenacity = "^8.0.1"
backoff = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
